[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BtnNextBattle" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -27.0
margin_right = 70.0
margin_bottom = 27.0
text = "NEXT BATTLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnAttack" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -170.0
margin_right = -10.0
margin_bottom = -116.0
disabled = true
text = "ATTACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnDefend" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -170.0
margin_right = 150.0
margin_bottom = -116.0
disabled = true
text = "DEFEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log1" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -580.0
margin_right = -20.0
margin_bottom = -566.0
text = "Warrior attacks!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log2" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -600.0
margin_right = -20.0
margin_bottom = -586.0
custom_colors/font_color = Color( 1, 1, 1, 0.705882 )
text = "Slime dies!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log3" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -620.0
margin_right = -20.0
margin_bottom = -606.0
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
text = "Warrior takes 1 damage!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -150.0
margin_right = 90.0
margin_bottom = -116.0
bbcode_enabled = true
bbcode_text = "[center][color=red]YOU
WIN!"
text = "YOU
WIN!"
__meta__ = {
"_edit_use_anchors_": false
}
